--- a/lab2/config.json
+++ b/lab2/config.json
@@ -2,7 +2,7 @@
 	"mysql" : {
 		"host" : "127.0.0.1",
 		"user" : "root",
-		"passwd" : "pawel717",
+		"passwd" : "passwd",
 		"database" : "lab2",
 		"use_unicode" : true
 	},
